test/integration/fixtures/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: echo-gateway
  namespace: gateway-api-test
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "echo-gateway.apps-crc.testing"
      port: 80
      protocol: HTTP
    - name: https
      hostname: "echo-gateway.apps-crc.testing"
      port: 443
      protocol: TLS
      tls:
        mode: Passthrough
