test/integration/fixtures/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: gateway-api-test
spec:
  parentRefs:
    - name: echo-gateway
  hostnames:
    - "echo-gateway.apps-crc.testing"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: echo-service
          port: 8080
